{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 149,
  "lineage": "7e3ff7e1-9d43-6f1d-5662-af8ac50df179",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-047495eebfe36b079",
            "domain": "vpc",
            "id": "eipalloc-51d2ca62",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0e28d87d217527569",
            "private_dns": "ip-10-0-0-237.eu-central-1.compute.internal",
            "private_ip": "10.0.0.237",
            "public_dns": "ec2-3-69-69-24.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.69.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Exadel-Elastic-IP"
            },
            "tags_all": {
              "Name": "Exadel-Elastic-IP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Red_Hat_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ec8443c2a35b0ba",
            "arn": "arn:aws:ec2:eu-central-1:475468823417:instance/i-072733b8e8bb279af",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072733b8e8bb279af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7ff33e1ec6d58fc",
            "private_dns": "ip-10-0-1-42.eu-central-1.compute.internal",
            "private_ip": "10.0.1.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8c74ab516efe1e3",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00da844fa3b88ad0d",
            "tags": {
              "Name": "Amazon_Linux_server",
              "Owner": "Goga S.",
              "Project": "Exadel Task 3"
            },
            "tags_all": {
              "Name": "Amazon_Linux_server",
              "Owner": "Goga S.",
              "Project": "Exadel Task 3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048dc4aa420875d02"
            ]
          },
          "dependencies": [
            "aws_security_group.Red_Hat_security",
            "aws_subnet.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f7491af5eef733a",
            "arn": "arn:aws:ec2:eu-central-1:475468823417:instance/i-0dae81e90e1b2540f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dae81e90e1b2540f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0efa19df5e18c5a71",
            "private_dns": "ip-10-0-0-117.eu-central-1.compute.internal",
            "private_ip": "10.0.0.117",
            "public_ip": "3.67.224.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-032895448e73c1794",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ea47f90f0d30c0d",
            "tags": {
              "Name": "Ubuntu_server",
              "Owner": "Goga S.",
              "Project": "Exadel Task 3"
            },
            "tags_all": {
              "Name": "Ubuntu_server",
              "Owner": "Goga S.",
              "Project": "Exadel Task 3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06cc122e0cb964a89"
            ]
          },
          "dependencies": [
            "aws_security_group.Ubuntu_security",
            "aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475468823417:internet-gateway/igw-038f8ca57aeb5cc8c",
            "id": "igw-038f8ca57aeb5cc8c",
            "owner_id": "475468823417",
            "tags": {
              "Name": "exadel internet gateway"
            },
            "tags_all": {
              "Name": "exadel internet gateway"
            },
            "vpc_id": "vpc-0d502d302d4341e43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-51d2ca62",
            "connectivity_type": "public",
            "id": "nat-06c89f07a644713f4",
            "network_interface_id": "eni-0e28d87d217527569",
            "private_ip": "10.0.0.237",
            "public_ip": "3.69.69.24",
            "subnet_id": "subnet-06ea47f90f0d30c0d",
            "tags": {
              "Name": "Exadel-NAT-GW"
            },
            "tags_all": {
              "Name": "Exadel-NAT-GW"
            }
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.main",
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475468823417:route-table/rtb-044e947c47ef64959",
            "id": "rtb-044e947c47ef64959",
            "owner_id": "475468823417",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06c89f07a644713f4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route for private subnet"
            },
            "tags_all": {
              "Name": "route for private subnet"
            },
            "vpc_id": "vpc-0d502d302d4341e43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475468823417:route-table/rtb-05097d6bada31d7d7",
            "id": "rtb-05097d6bada31d7d7",
            "owner_id": "475468823417",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-038f8ca57aeb5cc8c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "exadel_RTB"
            },
            "tags_all": {
              "Name": "exadel_RTB"
            },
            "vpc_id": "vpc-0d502d302d4341e43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d0b3c485e071403",
            "route_table_id": "rtb-044e947c47ef64959",
            "subnet_id": "subnet-00da844fa3b88ad0d"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef7aa6826ed6e0dc",
            "route_table_id": "rtb-05097d6bada31d7d7",
            "subnet_id": "subnet-06ea47f90f0d30c0d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Red_Hat_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475468823417:security-group/sg-048dc4aa420875d02",
            "description": "task 3/3",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-048dc4aa420875d02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Amazon Linux security group",
            "name_prefix": "",
            "owner_id": "475468823417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh_icmp_https_private"
            },
            "tags_all": {
              "Name": "allow_http_ssh_icmp_https_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d502d302d4341e43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Ubuntu_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475468823417:security-group/sg-06cc122e0cb964a89",
            "description": "task 3/2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cc122e0cb964a89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Ubuntu security group",
            "name_prefix": "",
            "owner_id": "475468823417",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh_icmp_https"
            },
            "tags_all": {
              "Name": "allow_http_ssh_icmp_https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d502d302d4341e43"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475468823417:subnet/subnet-00da844fa3b88ad0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00da844fa3b88ad0d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "475468823417",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0d502d302d4341e43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475468823417:subnet/subnet-06ea47f90f0d30c0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06ea47f90f0d30c0d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475468823417",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0d502d302d4341e43"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475468823417:vpc/vpc-0d502d302d4341e43",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049c10197736338f3",
            "default_route_table_id": "rtb-0719a55a4ccdd1041",
            "default_security_group_id": "sg-0e3fcc26b0e8e135e",
            "dhcp_options_id": "dopt-852caaef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d502d302d4341e43",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0719a55a4ccdd1041",
            "owner_id": "475468823417",
            "tags": {
              "Name": "Exadel VPC"
            },
            "tags_all": {
              "Name": "Exadel VPC"
            }
          }
        }
      ]
    }
  ]
}